--- a/Kiba/View/SelfService/KBAInfoController.xib
+++ b/Kiba/View/SelfService/KBAInfoController.xib
@@ -11,17 +11,24 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2">
-            <rect key="frame" x="0.0" y="0.0" width="354" height="222"/>
+            <rect key="frame" x="0.0" y="0.0" width="315" height="285"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCK-LL-yzR">
-                    <rect key="frame" x="0.0" y="0.0" width="354" height="222"/>
+                    <rect key="frame" x="20" y="52" width="275" height="213"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <string key="text">Verbinden sie ich mit der Kiba-Station um alle Vorteile zu genießen.  Führen sie Umbuchen durch, lassen sie sich ihre Kontoauszücke anzeigen und drucken oder geben sie verschiedene Anträge ab.</string>
+                    <string key="text">Verbinden Sie sich mit der Kiba-Station um alle Vorteile zu genießen.  Führen sie Umbuchen durch, lassen sie sich ihre Kontoauszücke anzeigen und drucken oder geben sie verschiedene Anträge ab.</string>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Der SelfService" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Dg-EK-huO">
+                    <rect key="frame" x="89" y="20" width="135" height="24"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
