--- a/Kiba/View/SelfService/KBAInfoController.xib
+++ b/Kiba/View/SelfService/KBAInfoController.xib
@@ -18,7 +18,7 @@
                     <rect key="frame" x="20" y="52" width="275" height="213"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <string key="text">Verbinden Sie sich mit der Kiba-Station um alle Vorteile zu genießen.  Führen sie Umbuchen durch, lassen sie sich ihre Kontoauszücke anzeigen und drucken oder geben sie verschiedene Anträge ab.</string>
+                    <string key="text">Verbinden Sie sich mit der Kiba-Station, um alle Vorteile zu genießen.  Führen sie Umbuchungen durch, lassen Sie sich ihre Kontoauszücke anzeigen und drucken oder verwalten Sie Ihre Konten.</string>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
